--- a/landingelec/src/components/Button.css
+++ b/landingelec/src/components/Button.css
@@ -1,9 +1,12 @@
 .button {
-    color: red;
-    
+    /* color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .button:hover {
     cursor: pointer;
     transition: 0.5s ;
 }
+
