--- a/landingelec/src/components/Cart.css
+++ b/landingelec/src/components/Cart.css
@@ -1,7 +1,45 @@
 .cart-container {
-    /* background: white; */
-    background: #e96c6c;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+    /* background: #e96c6c; */
     height: 400px;
     width: 300px ;
+    border-radius: 5px;
+    border: solid 2px #11145244;
+    box-shadow: 1px 2px 4px #10599462;
+    padding-inline: 10px;
+    padding-block: 15px ;
+}
+
+.top-cart {
+    display: flex;
+}
+
+.cart-container p {
+    width: 90%;
+    text-align: center;
+}
+
+
+.image-block {
+    width: 100%;
+    height: 50%;
+    background: mediumpurple;
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+}
+
+.cart-button {
+    font-size: medium;
+    background: rgba(238, 76, 76, 0.151);
+    width: 200px;
+    height: 40px;
+    /* margin: 5px; */
+    margin-top: 15px;
+    border: solid #ED1B24 2px;
     border-radius: 5px;
 }
