--- a/landingelec/src/Pages/Services/Service.css
+++ b/landingelec/src/Pages/Services/Service.css
@@ -1,7 +1,21 @@
 .container-service {
+    margin-top: -225px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    /* background: red; */
+}
+
+.marquee {
+    width: 100%;
+    height: 150px;
+    background: hotpink;
+    margin-bottom: 50px;
+}
+
+.hero-service {
+    display: flex;
+     align-items: center;
     justify-content: center;
     gap: 30px;
-    /* background: red; */
+    width: 100%;
 }
