--- a/landingelec/src/Pages/Hello/Welcome.css
+++ b/landingelec/src/Pages/Hello/Welcome.css
@@ -6,11 +6,24 @@
     border: #7A481F solid 2px ;
 }
 
+
 .container-welcome {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+}
+
+.marquee-welcome {
+    background: rgb(255, 255, 255);
+    height: 50px;
+   
+}
+
+.marquee-welcome-text {
+    /* background: rgb(26, 38, 207); */
+    width: fit-content;
+    
 }
 
 .logo {
@@ -64,7 +77,23 @@
     display: flex;
     /* background: #3fbb5e; */
     justify-content: space-between;
+    align-items: center;
     width: 100%;
+    height: 80px;
+}
+
+.header-welcome-page .num {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background: #000; */
+    width: 75vw;
+    height: 100%;
+}
+
+.num-content {
+    font-size: 55px;
+    font-weight: 500;
 }
 
 .image-urgence {
