--- a/landingelec/src/Pages/Services/Service.css
+++ b/landingelec/src/Pages/Services/Service.css
@@ -1,15 +1,24 @@
 .container-service {
+    display: flex;
+    align-items: center;
     margin-top: -225px;
     display: flex;
     flex-direction: column;
     /* background: red; */
+    padding-bottom: 50px;
 }
 
-.marquee {
+.marquee-service {
+    /* background: blue;  */
+    font-size: 50px;
+    width: fit-content;
+    color: rgb(14, 16, 121);
+}
+
+.Marquee-conaiter {
     width: 100%;
-    height: 150px;
-    background: hotpink;
-    margin-bottom: 50px;
+    width: 50%;
+    /* background: rgb(175, 73, 73); */
 }
 
 .hero-service {
