--- a/landingelec/src/components/Marquee.css
+++ b/landingelec/src/components/Marquee.css
@@ -1,5 +1,8 @@
 .container-marquee {
-    background: black;
+    /* background: black; */
     height: 150px;
-    width: 650px;
+    overflow: hidden;
+
 }
+
+
