--- a/landingelec/src/Pages/diagnostic/Diagno.css
+++ b/landingelec/src/Pages/diagnostic/Diagno.css
@@ -40,6 +40,7 @@
     justify-content: space-between;
     justify-content: center;
     gap: 50px;
+    flex-wrap: wrap;
 
     /* width: 75% ; */
 }
