--- a/landingelec/src/components/Cart.css
+++ b/landingelec/src/components/Cart.css
@@ -12,10 +12,16 @@
     box-shadow: 1px 2px 4px #10599462;
     padding-inline: 10px;
     padding-block: 15px ;
+    font-family: "Roboto" ,serif;
 }
 
 .top-cart {
     display: flex;
+}
+
+.top-cart img {
+    width: 100px;
+    height: 100px;
 }
 
 .cart-container p {
