--- a/landingelec/src/index.css
+++ b/landingelec/src/index.css
@@ -1,5 +1,6 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: sans-serif ;
+    box-sizing: border-box;
+    font-family: sans-serif;
 }
