--- a/src/Pages/Hello/Welcome.css
+++ b/src/Pages/Hello/Welcome.css
@@ -168,11 +168,14 @@
     }
 
     .header-welcome-page .cta-welcome {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         order: 2;
-        font-size: 1rem;
+        font-size: 1.5rem;
         padding: 5px 10px;
-        width: auto;
-        height: auto;
+        width: 75%;
+        height: 70px;
     }
 
     .header-welcome-page .num {
@@ -183,6 +186,10 @@
 
     .num-content {
         white-space: nowrap;
-        font-size: clamp(16px, 4vw, 20px);
+        font-size: clamp(16px, 5vw, 25px);
+        font-weight: bolder;
+        background: #a35f5f;
+        flex-wrap: wrap;
+        /* width: 90vw; */
     }
 }
