--- a/src/Pages/Services/Service.css
+++ b/src/Pages/Services/Service.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     /* margin-top: clamp(-50px, -20vw, -225px); */
-    margin-top: -20vw;
+    margin-top: -40vh;
     flex-direction: column;
     padding-bottom: clamp(20px, 5vw, 50px);
 }
@@ -26,4 +26,16 @@
     width: auto;
     flex-wrap: wrap;
     padding: clamp(0px, 2vw, 15px);
+}
+
+@media (max-width : 767px) {
+    .container-service {
+        margin-top: -20vh;
+
+    }
+
+    .hero-service {
+        position: relative;
+        bottom: 50px;
+    }
 }
