--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -29,8 +29,8 @@
 }
 
 .top-cart h1 {
-    font-size: clamp(1rem, 2vw, 1.2rem);
-    margin: 0;
+    font-size: clamp(1.5rem, 2vw, 2rem);
+    margin-left: 10px;
 }
 
 .top-cart img {
@@ -42,24 +42,25 @@
 .cart-container p {
     width: clamp(90%, 92vw, 95%);
     text-align: center;
-    font-size: clamp(0.85rem, 1.5vw, 1rem);
+    font-size: clamp(1rem, 1.3vw, 1.2rem);
     line-height: 1.4;
 }
 
 .image-block {
     width: 100%;
     height: 50%;
-    background: mediumpurple;
+
     background-size: cover;
     background-position: center;
     border-radius: 5px;
 }
 
 .cart-button {
-    font-size: clamp(0.9rem, 1.5vw, 1rem);
+    font-size: clamp(1rem, 1.3vw, 1.2rem);
     background: rgba(238, 76, 76, 0.151);
-    width: clamp(90%, 35vw, 220px);
-    max-width: 220px;
+    /* width: clamp(90%, 35vw, 220px); */
+    max-width: 400px;
+    width: 100%;
     height: clamp(40px, 7vw, 45px);
     margin-top: 15px;
     border: solid #ED1B24 2px;
