feat: Add initial styling for the diagnostic and service pages, including responsive layouts.

--- a/src/Pages/Services/Service.css
+++ b/src/Pages/Services/Service.css
@@ -39,3 +39,10 @@
         bottom: 50px;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .container-service {
+        margin-top: -110vh;
+
+    }
+}
