feat: Implement a new Welcome/Landing page component with responsive styling, animations, and a sticky call-to-action button.

--- a/src/Pages/Hello/Welcome.css
+++ b/src/Pages/Hello/Welcome.css
@@ -242,7 +242,13 @@
     }
 
     .image-urgence {
-        bottom: 50px;
+        bottom: 25px;
         position: relative;
+    }
+
+    .image-urgence .urgence {
+        width: 75vw;
+        height: 50px;
+        top: 25px;
     }
 }
