--- a/src/Pages/FastService/FastService.css
+++ b/src/Pages/FastService/FastService.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(180deg, #876D64 0%, #5d4a44 100%);
+    background: linear-gradient(135deg, #141e30 0%, #243b55 50%, #000000 100%);
     min-height: 100vh;
     padding-bottom: 20px;
 }
