--- a/src/Pages/diagnostic/Diagno.css
+++ b/src/Pages/diagnostic/Diagno.css
@@ -8,10 +8,13 @@
     justify-content: center;
     align-items: center;
     margin-top: -150px;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .diagno-container p {
     font-family: "Crimson Text", serif;
+
     /* font-weight: 300; */
 }
 
