--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -58,10 +58,11 @@
 .cart-button {
     font-size: clamp(1rem, 1.3vw, 1.2rem);
     background: rgba(238, 76, 76, 0.151);
-    /* width: clamp(90%, 35vw, 220px); */
     max-width: 400px;
     width: 100%;
     height: 60px;
+    min-height: 60px;
+    flex-shrink: 0;
     margin-top: 15px;
     border: solid #ED1B24 2px;
     border-radius: 5px;
